compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/erasure/extensionProperties.fir.kt
// COMPARE_WITH_LIGHT_TREE

class G<T>

<!CONFLICTING_JVM_DECLARATIONS{LT}!><!CONFLICTING_JVM_DECLARATIONS{PSI}!>val <T> G<T>.foo: Int<!>
    get() = 1<!>

<!CONFLICTING_JVM_DECLARATIONS{LT}!><!CONFLICTING_JVM_DECLARATIONS{PSI}!>val G<String>.foo: Int<!>
    get() = 1<!>
